@@ -1,3 +1,8 @@
+2010-09-26  Onkar Shinde  <onkarshinde@gmail.com>
+
+	* src/callbacks.c: Add an error message to be shown when assembly
+	tutorial file is not found. Mark 'Select font' string for translation.
+
 2010-09-25  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* configure.in, src/main.c: Use autoconf variable to specify windows
